# server.js
@@ -1,27 +1,66 @@
 const express = require('express');
 const dotenv = require('dotenv');
 
-
 dotenv.config();
 
-const { connectDB } = require('./db/connection');
-const membersRoutes = require('./routes/membersRoutes');
-const plansRoutes = require('./routes/plansRoutes');
-
+const session = require('express-session');
+const passport = require('passport');
+const GitHubStrategy = require('passport-github2').Strategy;
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
+const { connectDB } = require('./db/connection');
+
+const authRoutes = require('./routes/authRoutes');
+const membersRoutes = require('./routes/membersRoutes');
+const plansRoutes = require('./routes/plansRoutes');
+const trainersRoutes = require('./routes/trainersRoutes');
+const sessionsRoutes = require('./routes/sessionsRoutes');
 
 const app = express();
 const PORT = process.env.PORT || 3000;
 
 app.use(express.json());
 
+app.use(
+  session({
+    secret: process.env.SESSION_SECRET,
+    resave: false,
+    saveUninitialized: false
+  })
+);
+
+app.use(passport.initialize());
+app.use(passport.session());
+
+passport.use(
+  new GitHubStrategy(
+    {
+      clientID: process.env.GITHUB_CLIENT_ID,
+      clientSecret: process.env.GITHUB_CLIENT_SECRET,
+      callbackURL: 'http://localhost:3000/auth/github/callback'
+    },
+    (accessToken, refreshToken, profile, done) => {
+      return done(null, profile);
+    }
+  )
+);
+
+passport.serializeUser((user, done) => {
+  done(null, user);
+});
+
+passport.deserializeUser((user, done) => {
+  done(null, user);
+});
+
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
+app.use('/auth', authRoutes);
 app.use('/members', membersRoutes);
 app.use('/plans', plansRoutes);
-
+app.use('/trainers', trainersRoutes);
+app.use('/sessions', sessionsRoutes);
 
 app.get('/', (req, res) => {
   res.send('GymManager API is running');
@@ -35,4 +74,8 @@ async function startServer() {
   });
 }
 
-startServer();
+if (require.main === module) {
+  startServer();
+}
+
+module.exports = app;
